<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/main_bg" >
    
    <!-- titlebar -->
    <com.example.minicrpc.widget.CommonTitleBar
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:has_left_button="true"
        app:has_right_button="false"
        app:left_button_background="@drawable/back_arrow_selector"
        app:left_button_text=""
        app:title="@string/smsbless_title"
        android:layout_marginBottom="10dp" />
    
    
    <!-- part 1 -->
    <LinearLayout 
        android:id="@+id/ll_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/smsbless_ll_bg" 
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginLeft="@dimen/d2"
        android:layout_marginRight="@dimen/d2"
        android:layout_marginBottom="10dp" >
        
        <TextView 
            android:id="@+id/contacts_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/smsbless_contact"
            android:padding="6dp"
            android:textColor="#ffc68753"
            android:focusable="true"
            android:focusableInTouchMode="true"  />
        
        <View 
            android:id="@+id/splitline1"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@drawable/soildline" />
        
        <EditText 
            android:id="@+id/tel_number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="phone"
            android:background="@null"
            android:text="1234563" />
        
        <ImageButton
            android:contentDescription="@string/content_description"
            android:id="@+id/phone_action" 
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/luckydog_name_action_selector"
            android:layout_marginRight="5dp"  />
        
    </LinearLayout>
    
    
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">
    
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        
    <!-- part 2 -->
    <LinearLayout 
        android:id="@+id/ll_txv_part2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="150dp"
        android:background="@drawable/smsbless_ll_bg"
        android:layout_marginLeft="@dimen/d2"
        android:layout_marginRight="@dimen/d2"
        android:layout_marginBottom="15dp"
        android:paddingTop="10dp"
        android:paddingLeft="5dp"
        android:paddingBottom="5dp"
        android:paddingRight="5dp"
        android:orientation="vertical"  >
        
        <EditText 
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/smsbless_happybirthday_hint"
            android:text="@string/smsbless_happybirthday"
            android:paddingLeft="4dp"
            android:gravity="left" />
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            
            <TextView 
                android:id="@+id/btn_best_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/smsbless_best_bless_msg"
                android:background="@drawable/favorite_bg_off"
                android:textColor="@android:color/holo_red_light" 
                android:layout_marginRight="10dp"/>
            
            <TextView 
                android:id="@+id/btn_favorites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/smsbless_favorites"
                android:background="@drawable/favorite_bg_off"
                android:textColor="@android:color/holo_red_light" />
            
        </LinearLayout>
        
  
        
    </LinearLayout>
    
    
    
          <!-- 第三部分 -->
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/d2"
            android:layout_marginRight="@dimen/d2" >
            
            <LinearLayout 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="@dimen/d3" >
            
	            <TextView 
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:textColor="#ffc68753"
	                android:text="@string/smsbless_ontime_auto_send_flag" />
	            
	            <ToggleButton 
	                android:id="@+id/btn_ontime_flag"
	                android:layout_gravity="right" 
	                android:layout_height="30dp"
	                android:layout_width="40dp"
	                android:background="@drawable/smsbless_tgbtn_selector"
	                android:textOff="@null"
	                android:textOn="@null"
	                />
	            
            </LinearLayout>

            
            <LinearLayout 
                android:id="@+id/ll_ontime_send_msg_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone" >
	            
                            
            <View 
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/dashline"
                android:layout_marginTop="@dimen/d3"
                android:layout_marginBottom="@dimen/d3" />
            
              <LinearLayout 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="@dimen/d3" >
            
	            <TextView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textColor="#ffc68753"
	                android:text="@string/smsbless_send_date" />
	            
	            <TextView 
	                android:id="@+id/txv_send_date"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:text="@string/smsbless_send_date_content" />
	            
	             <ImageButton 
	                android:contentDescription="@string/content_description"
	                android:id="@+id/imgbtn_send_date_action"
	                android:layout_width="15dp"
	                android:layout_height="15dp"
	                android:background="@drawable/edit"/>
	            
            </LinearLayout>
            
              
            
            <View 
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/dashline"
                android:layout_marginTop="@dimen/d3"
                android:layout_marginBottom="@dimen/d3" />
            
            
             <LinearLayout 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="@dimen/d3" >
            
	            <TextView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textColor="#ffc68753"
	                android:text="@string/smsbless_send_time" />
	            
	            <EditText 
	                android:id="@+id/txv_send_time"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:background="@null"
	                android:inputType="time"
	                android:text="6:53"
	                android:hint="6:53" />
	            

	            <ImageButton 
	                android:contentDescription="@string/content_description"
	                android:id="@+id/imgbtn_send_time_action"
	                android:layout_width="15dp"
	                android:layout_height="15dp"
	                android:background="@drawable/edit"/>
	            	            
            </LinearLayout>
              
          </LinearLayout>
            
        </LinearLayout>
    
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/bgedge"/>
    
    <Button 
        android:id="@+id/save"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:textColor="@android:color/white"
        android:text="@string/send"
        android:background="@drawable/luckydog_save_action_selector"
        android:layout_marginTop="25dp"
        android:layout_gravity="center" />
    
    </LinearLayout>
    
    </ScrollView>

</LinearLayout>
